--- a/indexes/nsc993/72.md
+++ b/indexes/nsc993/72.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】彭帅接受法媒采访：一次精心安排的访谈](../../pages/nsc993/n13565969.md) 
+#### [大陆律师：徐州性奴案官方最新通告不能成立](../../pages/nsc993/n13565923.md) 
+#### [黄后乐：可青，你在哪里？](../../pages/nsc993/n13564695.md) 
 #### [【网海拾贝】冬奥开幕仅一天 吐槽大会开始了](../../pages/nsc993/n13562799.md) 
 #### [蔡慎坤：国足终于可以歇一歇了](../../pages/nsc993/n13562715.md) 
 #### [网友致徐州丰县中共县委书记的公开信](../../pages/nsc993/n13560481.md) 
@@ -27,9 +30,6 @@
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13534222.md) 
 #### [【网海拾贝】中国坚持清零陷入难以摆脱的死胡同](../../pages/nsc993/n13530282.md) 
 #### [伍新：真吃人的纸老虎](../../pages/nsc993/n13530314.md) 
-#### [【网海拾贝】北京冬奥：21世纪希特勒式奥运会](../../pages/nsc993/n13528201.md) 
-#### [封城后，为找一张病床，打了1000个求助电话](../../pages/nsc993/n13525687.md) 
-#### [颜纯钩：伤天害理奢言天堂，灭绝人性才是革命](../../pages/nsc993/n13525987.md) 
 
 ---
 #### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
