have a nice day!

--- a/indexes/nsc993/72.md
+++ b/indexes/nsc993/72.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [“你们纯粹是在侮辱中国网民的智商！”](../../pages/nsc993/n13566297.md) 
 #### [【网海拾贝】彭帅接受法媒采访：一次精心安排的访谈](../../pages/nsc993/n13565969.md) 
 #### [大陆律师：徐州性奴案官方最新通告不能成立](../../pages/nsc993/n13565923.md) 
 #### [黄后乐：可青，你在哪里？](../../pages/nsc993/n13564695.md) 
@@ -29,7 +30,6 @@
 #### [电影院里看民主](../../pages/nsc993/n13534505.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13534222.md) 
 #### [【网海拾贝】中国坚持清零陷入难以摆脱的死胡同](../../pages/nsc993/n13530282.md) 
-#### [伍新：真吃人的纸老虎](../../pages/nsc993/n13530314.md) 
 
 ---
 #### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
