--- a/indexes/nsc993/73.md
+++ b/indexes/nsc993/73.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】没有人站在岸上，没有人高枕无忧](../../pages/nsc993/n13570595.md) 
 #### [司法护理专家：活摘器官造成广泛的受害群](../../pages/nsc993/n13570425.md) 
 #### [从强制流产到强制不流产，网友斥政策魔幻](../../pages/nsc993/n13570429.md) 
 #### [“你们纯粹是在侮辱中国网民的智商！”](../../pages/nsc993/n13566297.md) 
@@ -29,7 +30,6 @@
 #### [王维洛：郑州水灾真相难以掩盖](../../pages/nsc993/n13541256.md) 
 #### [佳能“恶意补偿”？网友：请这样的恶意再多些](../../pages/nsc993/n13538850.md) 
 #### [【网海拾贝】“不惜一切代价”中的那个代价](../../pages/nsc993/n13534745.md) 
-#### [电影院里看民主](../../pages/nsc993/n13534505.md) 
 
 ---
-#### 第 [ [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) / [65](./65.md) ] 页
+#### 第 [ [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) ] 页
