have a nice day!

--- a/indexes/nsc1025/167.md
+++ b/indexes/nsc1025/167.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共投资美生物制药公司引发担忧](../../pages/nsc1025/n13572407.md) 
+#### [王赫：中国经济为何难以超越美国？](../../pages/nsc1025/n13572678.md) 
 #### [【网海拾贝】从2008到2022，一条由盛而衰的曲线](../../pages/nsc1025/n13572204.md) 
 #### [古风：中共政权崩溃前的疯狂（上）](../../pages/nsc1025/n13572038.md) 
 #### [袁斌：徐州八孩女事件 我们该按下暂停键了吗](../../pages/nsc1025/n13572188.md) 
@@ -28,8 +30,6 @@
 #### [王赫：拜登政府在南太平洋反制中共](../../pages/nsc1025/n13565597.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13565536.md) 
 #### [周晓辉：北京冬奥会要比肩美国 普京无意中打脸](../../pages/nsc1025/n13565141.md) 
-#### [黄天辰：徐子八与彭帅事件 中共掩盖手段如出一辙](../../pages/nsc1025/n13564282.md) 
-#### [【名家专栏】中共的电影审查令好莱坞头疼](../../pages/nsc1025/n13563184.md) 
 
 ---
-#### 第 [ [166](./166.md) / [165](./165.md) / [164](./164.md) / [163](./163.md) / [162](./162.md) / [161](./161.md) / [160](./160.md) / [159](./159.md) ] 页
+#### 第 [ [167](./167.md) / [166](./166.md) / [165](./165.md) / [164](./164.md) / [163](./163.md) / [162](./162.md) / [161](./161.md) / [160](./160.md) ] 页
