--- a/indexes/nsc1028/59.md
+++ b/indexes/nsc1028/59.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [李清：武训家乡骇人听闻的《百日无孩》运动](../../pages/nsc1028/n13570011.md) 
+#### [夏祷：红色木马入城记](../../pages/nsc1028/n13566468.md) 
 #### [李天韵：“武统台湾” 中共必亡](../../pages/nsc1028/n13531538.md) 
 #### [王友琴：刘华失去右胳膊—北京大学的父子两代悲情](../../pages/nsc1028/n13559130.md) 
 #### [王友群：黄炎培投奔中共 家人惨遭中共迫害](../../pages/nsc1028/n13556189.md) 
@@ -28,8 +30,6 @@
 #### [李清：我们都是喝狼奶长大的](../../pages/nsc1028/n13471478.md) 
 #### [彩虹护守的土地 为什么世界不能失去台湾](../../pages/nsc1028/n13476849.md) 
 #### [中共对世界的腐蚀与伤害](../../pages/nsc1028/n13463833.md) 
-#### [王友群：曾庆红亲信苏荣把家变“权钱交易所”](../../pages/nsc1028/n13463003.md) 
-#### [李清：失聪人和小提琴的情结](../../pages/nsc1028/n13459280.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
