--- a/indexes/nsc1025/167.md
+++ b/indexes/nsc1025/167.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [古风：中共政权崩溃前的疯狂（下）](../../pages/nsc1025/n13572231.md) 
+#### [袁斌：两女子声援八孩女被拘，徐州当局意欲何为？](../../pages/nsc1025/n13573436.md) 
+#### [王友群：暴徒纽约撒野 再现中共蠢恶](../../pages/nsc1025/n13572948.md) 
+#### [颜丹：北京冬奥会为何败笔多？](../../pages/nsc1025/n13572796.md) 
+#### [杨威：《美国印太战略》关乎中国的未来](../../pages/nsc1025/n13572945.md) 
+#### [周晓辉：八孩女或被施残忍手术 徐州当局怕什么](../../pages/nsc1025/n13572897.md) 
+#### [【名家专栏】乌克兰和台湾问题与中俄关系](../../pages/nsc1025/n13572435.md) 
 #### [【名家专栏】中共投资美生物制药公司引发担忧](../../pages/nsc1025/n13572407.md) 
 #### [王赫：中国经济为何难以超越美国？](../../pages/nsc1025/n13572678.md) 
 #### [【网海拾贝】从2008到2022，一条由盛而衰的曲线](../../pages/nsc1025/n13572204.md) 
@@ -23,13 +30,6 @@
 #### [郑纯清：“冰坛二归”与“乒坛三杰”](../../pages/nsc1025/n13568046.md) 
 #### [古风：中共“联俄抗美” 缺乏民意基础](../../pages/nsc1025/n13567848.md) 
 #### [郝平：中共下血本 冬奥“分钟级”天气预报的背后](../../pages/nsc1025/n13567378.md) 
-#### [古风：中共“大外宣”在海外处处遭反噬](../../pages/nsc1025/n13566014.md) 
-#### [钟原：长篇反习近平文章爆了哪些料（上）](../../pages/nsc1025/n13566453.md) 
-#### [【名家专栏】金融界需要看穿中共的野心](../../pages/nsc1025/n13565933.md) 
-#### [李明：探讨防疫措施对全球疫情的有效性问题](../../pages/nsc1025/n13565429.md) 
-#### [王赫：拜登政府在南太平洋反制中共](../../pages/nsc1025/n13565597.md) 
-#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13565536.md) 
-#### [周晓辉：北京冬奥会要比肩美国 普京无意中打脸](../../pages/nsc1025/n13565141.md) 
 
 ---
 #### 第 [ [167](./167.md) / [166](./166.md) / [165](./165.md) / [164](./164.md) / [163](./163.md) / [162](./162.md) / [161](./161.md) / [160](./160.md) ] 页
