--- a/indexes/nsc1025/167.md
+++ b/indexes/nsc1025/167.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [吴惠林：向巴菲特学习](../../pages/nsc1025/n13576152.md) 
+#### [觅真：迫害法轮功 新年期间中共又制造了多少人间悲剧](../../pages/nsc1025/n13574912.md) 
+#### [乾元：中共是中国社会乱象的渊薮](../../pages/nsc1025/n13574792.md) 
+#### [程晓农：重新审视邓小平南巡的“功”与过](../../pages/nsc1025/n13574752.md) 
+#### [黄天辰：中共冬奥全武行“夺”金 招数让世界瞠目](../../pages/nsc1025/n13574671.md) 
+#### [周田：中共若攻台 需要多长时间准备（一）](../../pages/nsc1025/n13574493.md) 
+#### [【名家专栏】人类不可以当作机器去管理](../../pages/nsc1025/n13573928.md) 
 #### [古风：中共政权崩溃前的疯狂（下）](../../pages/nsc1025/n13572231.md) 
 #### [袁斌：两女子声援八孩女被拘，徐州当局意欲何为？](../../pages/nsc1025/n13573436.md) 
 #### [王友群：暴徒纽约撒野 再现中共蠢恶](../../pages/nsc1025/n13572948.md) 
@@ -23,13 +30,6 @@
 #### [中纪委专访了谷爱凌，是否也该采访一下彭帅？](../../pages/nsc1025/n13569566.md) 
 #### [钟原：长篇反习近平文章爆了哪些料（下）](../../pages/nsc1025/n13567056.md) 
 #### [王友群：从反习近平长文想到薄熙来](../../pages/nsc1025/n13569209.md) 
-#### [周晓辉：“惊涛骇浪”更凶险 中南海虎年熬日子](../../pages/nsc1025/n13568888.md) 
-#### [【纪元专栏】车辆袭击抗议者 对政客和媒体敲响警钟](../../pages/nsc1025/n13569119.md) 
-#### [【名家专栏】中共从上到下悄然腐蚀联合国](../../pages/nsc1025/n13568360.md) 
-#### [【有冇搞错】香港爆疫不是坏事](../../pages/nsc1025/n13566642.md) 
-#### [郑纯清：“冰坛二归”与“乒坛三杰”](../../pages/nsc1025/n13568046.md) 
-#### [古风：中共“联俄抗美” 缺乏民意基础](../../pages/nsc1025/n13567848.md) 
-#### [郝平：中共下血本 冬奥“分钟级”天气预报的背后](../../pages/nsc1025/n13567378.md) 
 
 ---
 #### 第 [ [167](./167.md) / [166](./166.md) / [165](./165.md) / [164](./164.md) / [163](./163.md) / [162](./162.md) / [161](./161.md) / [160](./160.md) ] 页
