--- a/indexes/nsc1035/53.md
+++ b/indexes/nsc1035/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [影评：越来越明朗的希望——观贺岁片《聚会（2）》](../../pages/nsc1035/n13580867.md) 
 #### [颜纯钩：看《时代革命》百感交集 向导演致敬](../../pages/nsc1035/n13574843.md) 
 #### [颜纯钩﻿：一个反共斗士的心路历程](../../pages/nsc1035/n13553725.md) 
 #### [张菁：过年了，想起为修炼而遭难的许那们](../../pages/nsc1035/n13543871.md) 
@@ -29,7 +30,6 @@
 #### [王瑞雅：电影《抉择》带给台商的启示](../../pages/nsc1035/n13274064.md) 
 #### [王瑞雅：《面试》影评——生命中真正的贵人](../../pages/nsc1035/n13260528.md) 
 #### [达温：为什么中共领导下的中国看不到“英雄男孩”？](../../pages/nsc1035/n13257099.md) 
-#### [李思仪：每个中国人心里都有一部强拆血泪史](../../pages/nsc1035/n13249632.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
