--- a/indexes/nsc993/73.md
+++ b/indexes/nsc993/73.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [经济学家：“八孩妈”事件是人性恶，更是制度恶](../../pages/nsc993/n13583849.md) 
+#### [北大学子发公开信，吁中共彻查徐州铁链女事件](../../pages/nsc993/n13581127.md) 
 #### [【网海拾贝】铁链不解开，金牌有何用？](../../pages/nsc993/n13581050.md) 
 #### [杨某侠结婚照曝光 网民质疑不是“8孩女”](../../pages/nsc993/n13580940.md) 
 #### [【网海拾贝】面对“八孩女”的铁链，祖国你在哪？](../../pages/nsc993/n13578379.md) 
@@ -28,8 +30,6 @@
 #### [大陆作家对徐州性奴案提七点质疑](../../pages/nsc993/n13556764.md) 
 #### [千百度：在今天的中国，还有多少疯了的杨某侠](../../pages/nsc993/n13555073.md) 
 #### [【网海拾贝】美中科技脱钩，中国的代价更大](../../pages/nsc993/n13554949.md) 
-#### [林泉：第一贩卖人口大国的奥运圣会](../../pages/nsc993/n13553762.md) 
-#### [吴吕南吁居英港人：登记做选民 参选做议员](../../pages/nsc993/n13548833.md) 
 
 ---
 #### 第 [ [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) ] 页
