--- a/indexes/nsc1028/59.md
+++ b/indexes/nsc1028/59.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【名家专栏】对卵子“捐赠”说不](../../pages/nsc1028/n13581506.md) 
+#### [中共罪行录之七十一：郭沫若儿子的死](../../pages/nsc1028/n13583779.md) 
 #### [王友群：中共间谍金无怠潜伏美国三十多年](../../pages/nsc1028/n13574800.md) 
 #### [中共罪行录之七十一：胡适幼子之死](../../pages/nsc1028/n13575380.md) 
 #### [李清：武训家乡骇人听闻的《百日无孩》运动](../../pages/nsc1028/n13570011.md) 
@@ -28,8 +30,6 @@
 #### [永不停止的谎言与暴力 从“长津湖战役”说起](../../pages/nsc1028/n13494094.md) 
 #### [张菁： 蒋介石“驸马”陆久之效命中共被打成反革命](../../pages/nsc1028/n13495439.md) 
 #### [王友群：毛泽东的“御用文人”王力被打倒之谜](../../pages/nsc1028/n13493098.md) 
-#### [麦克阿瑟的韩战及台湾预言](../../pages/nsc1028/n13479197.md) 
-#### [李清：我们都是喝狼奶长大的](../../pages/nsc1028/n13471478.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
