--- a/indexes/nsc993/73.md
+++ b/indexes/nsc993/73.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】“铁链女”被拐后的前十年在哪里？](../../pages/nsc993/n13589391.md) 
+#### [伍新：在那“最具幸福感”的地方](../../pages/nsc993/n13588929.md) 
 #### [【网海拾贝】台湾跃居世界前列，海峡两岸东升西降](../../pages/nsc993/n13587009.md) 
 #### [黄翔：致被“铁链锁颈”的中国女性](../../pages/nsc993/n13586839.md) 
 #### [谢田：北约理应回应普京 重新定位针对中共](../../pages/nsc993/n13586770.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】放过中南海，岂不是避重就轻？](../../pages/nsc993/n13560444.md) 
 #### [面对徐州性奴案，一位作家与母亲的痛和愤怒](../../pages/nsc993/n13560392.md) 
 #### [徐州丰县拐卖妇女普遍 基层政府被指是保护伞](../../pages/nsc993/n13558232.md) 
-#### [理悟：壬寅新春赠言](../../pages/nsc993/n13558171.md) 
-#### [林泉：第一贩卖人口大国的奥运圣会](../../pages/nsc993/n13558148.md) 
 
 ---
 #### 第 [ [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) / [66](./66.md) ] 页
