--- a/indexes/nsc1028/59.md
+++ b/indexes/nsc1028/59.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [李清：建国门枪击案背后鲜为人知的故事](../../pages/nsc1028/n13589079.md) 
 #### [中共罪行录之七十二：经济学家的饥饿记忆](../../pages/nsc1028/n13586930.md) 
 #### [【名家专栏】对卵子“捐赠”说不](../../pages/nsc1028/n13581506.md) 
 #### [中共罪行录之七十一：郭沫若儿子的死](../../pages/nsc1028/n13583779.md) 
@@ -29,7 +30,6 @@
 #### [有52年党龄的著名作家聂绀弩对中共的醒悟](../../pages/nsc1028/n13508154.md) 
 #### [蔡慎坤：生命就像一盒巧克力，结果往往出人意料](../../pages/nsc1028/n13497991.md) 
 #### [永不停止的谎言与暴力 从“长津湖战役”说起](../../pages/nsc1028/n13494094.md) 
-#### [张菁： 蒋介石“驸马”陆久之效命中共被打成反革命](../../pages/nsc1028/n13495439.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
