--- a/indexes/nsc1026/52.md
+++ b/indexes/nsc1026/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [【谈股论金】黄金为避险王 比特币寒冬来临](../../pages/nsc1026/n13600406.md) 
 #### [【谈股论金】乌俄冲突为插曲 通胀才是主旋律](../../pages/nsc1026/n13576797.md) 
 #### [陈思敏：最差的年初开局 A股的脊梁在哪里？](../../pages/nsc1026/n13558359.md) 
 #### [王赫：中国金融市场对外资释放三个危险信号](../../pages/nsc1026/n13546389.md) 
@@ -29,7 +30,6 @@
 #### [程晓农：中国房地产业的多米诺骨牌效应](../../pages/nsc1026/n13259673.md) 
 #### [何冰：透视许家印发迹史与恒大爆雷危机](../../pages/nsc1026/n13253937.md) 
 #### [外汇大逃亡：只许州官放火 不许百姓点灯（下）](../../pages/nsc1026/n13245748.md) 
-#### [【名家专栏】恒大债务危机是中国版雷曼时刻？](../../pages/nsc1026/n13242613.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
