--- a/indexes/nsc1035/53.md
+++ b/indexes/nsc1035/53.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [云昭：走进窄门的梁小军](../../pages/nsc1035/n13605425.md) 
 #### [影评：我在为谁伤感落泪？](../../pages/nsc1035/n13594614.md) 
 #### [林青：法拉盛的历史 为美国的信仰自由奠基](../../pages/nsc1035/n13593675.md) 
 #### [影评：越来越明朗的希望——观贺岁片《聚会（2）》](../../pages/nsc1035/n13580867.md) 
@@ -29,7 +30,6 @@
 #### [觅真：从耄耋老人被劫入狱看解体中共的急迫](../../pages/nsc1035/n13284545.md) 
 #### [长风拂泪：辚辚浩然车，正气穿越美国](../../pages/nsc1035/n13284280.md) 
 #### [心若向阳，无惧风霜——观影片《意外》有感](../../pages/nsc1035/n13275318.md) 
-#### [王瑞雅：电影《抉择》带给台商的启示](../../pages/nsc1035/n13274064.md) 
 
 ---
 #### 第 [ [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) ] 页
