--- a/indexes/nsc1028/59.md
+++ b/indexes/nsc1028/59.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [被遗忘的礼仪艺术：蕴含神性智慧的正确行为](../../pages/nsc1028/n13607119.md) 
+#### [王友群：中共政治体制改革被终结之谜](../../pages/nsc1028/n13606004.md) 
 #### [张海霞：唐代的宗教自由到共产党的宗教迫害](../../pages/nsc1028/n13604693.md) 
 #### [中共罪行录之七十三：五花八门的“右派”罪名](../../pages/nsc1028/n13598550.md) 
 #### [王友群：毛泽东授意打倒的“胡风分子”阿垅](../../pages/nsc1028/n13592541.md) 
@@ -28,8 +30,6 @@
 #### [惠虎宇：台湾自古以来是中国的一部分吗？](../../pages/nsc1028/n13523034.md) 
 #### [【有冇搞错】中国群体免疫至少要一万年](../../pages/nsc1028/n13516675.md) 
 #### [中共罪行录之六十五：“一场血的洗礼”](../../pages/nsc1028/n13517785.md) 
-#### [中共罪恶录之六十四：讲真话送命的大美学家](../../pages/nsc1028/n13512932.md) 
-#### [【名家专栏】保护动物比保护儿童更重要吗？](../../pages/nsc1028/n13506846.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
