--- a/indexes/nsc993/74.md
+++ b/indexes/nsc993/74.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [网友：“江苏省调查组，请解释 ！”](../../pages/nsc993/n13613447.md) 
 #### [【网海拾贝】中共为何在乌克兰撤侨问题上出尔反尔？](../../pages/nsc993/n13610621.md) 
 #### [吴新：李莹是怎样被拐骗的](../../pages/nsc993/n13611171.md) 
 #### [东方霞：避疫](../../pages/nsc993/n13611148.md) 
@@ -29,7 +30,6 @@
 #### [陈达：江苏调查组——亡党加速器](../../pages/nsc993/n13593432.md) 
 #### [金刚行：一条铁链](../../pages/nsc993/n13593419.md) 
 #### [郑存柱：《转法轮》与传播学](../../pages/nsc993/n13593140.md) 
-#### [陈叔涵：中国人心头上的铁链](../../pages/nsc993/n13593305.md) 
 
 ---
 #### 第 [ [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) ] 页
