--- a/indexes/nsc1028/59.md
+++ b/indexes/nsc1028/59.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [我们从小到大学到的历史哪些是假的（12）](../../pages/nsc1028/n13619491.md) 
 #### [中共是怎么为自己涂脂抹粉的（10）](../../pages/nsc1028/n13615970.md) 
 #### [李天韵：国际共产党地下队伍](../../pages/nsc1028/n13611808.md) 
 #### [张菁：红色特工李时雨的风雨人生](../../pages/nsc1028/n13609187.md) 
@@ -29,7 +30,6 @@
 #### [张菁：红色间谍兄弟五人之悲剧人生](../../pages/nsc1028/n13534128.md) 
 #### [中共罪行录之六十六：中共副主席王洪文的奢靡](../../pages/nsc1028/n13527941.md) 
 #### [王友群：金融“大老虎”胡怀邦“案中案”](../../pages/nsc1028/n13523077.md) 
-#### [清竹：是谁让“起死回生”这一名词流传至今？](../../pages/nsc1028/n13523254.md) 
 
 ---
 #### 第 [ [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) ] 页
