--- a/indexes/nsc993/74.md
+++ b/indexes/nsc993/74.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】在乌克兰的炮声中，铁链女的哭声反而更清晰了](../../pages/nsc993/n13619568.md) 
 #### [【网海拾贝】中共不能暴露铁链女真实身份的原因](../../pages/nsc993/n13616093.md) 
 #### [如果铁链女是小花梅，官方为何不让亲人来认亲？](../../pages/nsc993/n13616043.md) 
 #### [【网海拾贝】吴京没来拯救大家，战狼也不见踪影](../../pages/nsc993/n13613477.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】级别再高的中共调查组也是剧组](../../pages/nsc993/n13595982.md) 
 #### [胡平：伟大的母亲有伟大的胸怀](../../pages/nsc993/n13593842.md) 
 #### [【网海拾贝】丰县铁链女悲剧，谁是罪魁祸首？](../../pages/nsc993/n13593730.md) 
-#### [吕千荣：我们都是“铁链女”](../../pages/nsc993/n13593464.md) 
 
 ---
 #### 第 [ [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) / [69](./69.md) / [68](./68.md) / [67](./67.md) ] 页
