have a nice day!

--- a/indexes/nsc1025/172.md
+++ b/indexes/nsc1025/172.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [王赫：中共假“就业优先” 难迈三道坎](../../pages/nsc1025/n13622473.md) 
+#### [王友群：俄乌战争给中共当局上了一课](../../pages/nsc1025/n13620391.md) 
+#### [钟原：中共两会前公布就业人数露马脚](../../pages/nsc1025/n13620466.md) 
+#### [【纪元专栏】政府出钱养媒体 两者愈发没有公信力](../../pages/nsc1025/n13620356.md) 
 #### [【名家专栏】中共的侵略历史与其宣传相悖](../../pages/nsc1025/n13619520.md) 
 #### [李宇明：中共乐见俄乌战争的爆发](../../pages/nsc1025/n13620078.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13619915.md) 
@@ -26,10 +30,6 @@
 #### [【名家专栏】加州应该采取措施降低油价](../../pages/nsc1025/n13611457.md) 
 #### [觅真：从惨遭屠戮增多看中共的末日疯狂](../../pages/nsc1025/n13611188.md) 
 #### [陈思敏：中共推进“东数西算” 超赶美国胜算几何？](../../pages/nsc1025/n13611087.md) 
-#### [乾元：从佩戴中共国旗到“不能展开撤侨行动”](../../pages/nsc1025/n13611002.md) 
-#### [雨：谁葬了她的芳华？](../../pages/nsc1025/n13610941.md) 
-#### [李正宽：俄乌交战 中共驻乌使馆闹乌龙](../../pages/nsc1025/n13609644.md) 
-#### [周田：中共若攻台 需要多长时间准备（三）](../../pages/nsc1025/n13609709.md) 
 
 ---
-#### 第 [ [171](./171.md) / [170](./170.md) / [169](./169.md) / [168](./168.md) / [167](./167.md) / [166](./166.md) / [165](./165.md) / [164](./164.md) ] 页
+#### 第 [ [172](./172.md) / [171](./171.md) / [170](./170.md) / [169](./169.md) / [168](./168.md) / [167](./167.md) / [166](./166.md) / [165](./165.md) ] 页
